# Bebop-web

./: .env.bebop.example  .env.example  .gitignore  .onboard-vision-error.txt  .onboard-vision-trigger  README.md  dashboard-cleanup-error.txt  package-lock.json  package.json
.github/: finalizer-trigger
diagnostics/: autonomy-hardening.txt
docs/: autonomy-hardening-review.md  autonomy-runtime-verification.md  autonomy.md  navigation.md  object-recognition.md  onboard-only-autonomy.md  perception.md  props-off-control-test.md  runtime-features.md
patches/: node-bebop+0.6.0.patch
perception-sidecar/: CMakeLists.txt  Dockerfile  entrypoint.sh
perception-sidecar/config/: bebop2.example.yaml
perception-sidecar/scripts/: apriltag_stream.py  recognition_stream.py
perception-sidecar/src/: engine_self_test.cpp  main.cpp
public/: altitude.css  altitude.js  app.js  autonomy.css  autonomy.js  dashboard.css  features.css  features.js  index.html  navigation.css  navigation.js  pad-map-bridge.js  perception.css  perception.js  readiness.css  readiness.js  recognition.css  recognition.js  styles.css
scripts/: apply-dashboard-cleanup.py  apply-object-recognition.py  apply-onboard-vision.py  autonomy-smoke.mjs  bootstrap-object-recognition.py  build-perception-sidecar.sh  calibrate-bebop-camera.py  dev.mjs  inspect-h264.sh  mock-perception-backend.mjs  perception-server-smoke.mjs  perception-smoke.mjs  run-landing-vision-sidecar.sh  run-perception-sidecar.sh  run-recognition-sidecar.sh  test-perception-sidecar.sh  verify-perception-sidecar.sh
src/: arstream2-video.ts  autonomy-hardening.test.ts  autonomy-hardening.ts  autonomy-launcher.ts  autonomy-service.ts  autonomy.test.ts  autonomy.ts  bebop-piloting.test.ts  bebop-piloting.ts  drone-adapters.test.ts  drone-adapters.ts  landing-vision.ts  (+16 more)
(+26 files in other folders)
